Add basix header to Python docs

--- a/doc/template/intro.html
+++ b/doc/template/intro.html
@@ -1,9 +1,7 @@
 <html>
 <head>
 <title>Basix documentation</title>
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-<link rel=stylesheet type='text/css' href='{{URL}}/assets/sty.css'>
+{{STYLESHEETS}}
 </head>
 <body>
 {{NAVBAR}}
