add install link

--- a/doc/template/navbar.html
+++ b/doc/template/navbar.html
@@ -2,6 +2,7 @@
 <div class='basixhead'>
 <div class='basixtitle'><a href='{{URL}}/index.html'>Basix</a></div>
 <a class='basixnav' href='{{URL}}/index.html'>Home</a>
+<a class='basixnav' href='{{URL}}/install.html'>Installation</a>
 <a class='basixnav' href='{{URL}}/cpp'>C++ docs</a>
 <a class='basixnav' href='{{URL}}/python'>Python docs</a>
 </div></div>
