--- a/doc/template/navbar.html
+++ b/doc/template/navbar.html
@@ -1,6 +1,6 @@
 <div class='basixheadwrapper'>
 <div class='basixhead'>
-<div class='basixtitle'><a href='{{URL}}/index.html'>Basix</a></div>
+<div class='basixtitle'><a href='{{URL}}/index.html'>Basix {{VERSION}}</a></div>
 <a class='basixnav' href='{{URL}}/index.html'>Home</a>
 <a class='basixnav' href='{{URL}}/install.html'>Installation</a>
 <a class='basixnav' href='{{URL}}/cpp'>C++ docs</a>
