--- a/doc/template/stylesheets.html
+++ b/doc/template/stylesheets.html
@@ -1,2 +1,3 @@
 <link href="https://docs.fenicsproject.org/pandoc.css" rel="stylesheet" type="text/css" />
 <link href="{{URL}}/assets/sty.css" rel="stylesheet" type="text/css" />
+<link rel="shortcut icon" type="image/x-icon" href="https://fenicsproject.org/favicon.ico"/>
