--- a/doc/template/stylesheets.html
+++ b/doc/template/stylesheets.html
@@ -1,3 +1,3 @@
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+<link href="https://docs.fenicsproject.org/pandoc.css" rel="stylesheet" type="text/css" />
 <link href="{{URL}}/assets/sty.css" rel="stylesheet" type="text/css" />
+<link rel="shortcut icon" type="image/x-icon" href="https://fenicsproject.org/favicon.ico"/>
