Put website header in cpp docs

--- a/doc/web/template/navbar.html
+++ b/doc/web/template/navbar.html
@@ -1,8 +1,7 @@
-<div class='fenicsheadwrapper'>
-<div class='fenicshead'>
-<div class='fenicstitle'><a href='{{URL}}/index.html'>Basix <span class='fenicsversion'>{{VERSION}}</span></a></div>
 <a class='fenicsnav' href='{{URL}}/index.html'>Home</a>
+&nbsp;
 <a class='fenicsnav' href='{{URL}}/install.html'>Installation</a>
+&nbsp;
 <a class='fenicsnav' href='{{URL}}/cpp'>C++ docs</a>
+&nbsp;
 <a class='fenicsnav' href='{{URL}}/python'>Python docs</a>
-</div></div>
